--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./index.js:/app/index.js
       - ./jobs.db:/app/jobs.db
+      - ./node_modules:/app/node_modules
     env_file:
       - .env
     command: "node -r dotenv/config index.js"
